--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,12 @@
 body {
     margin: 0;
 }
+
+.nav{
+    display: flex;
+    padding:10px 20px;
+    height:70px;
+    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+    
+}
+
