--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0;
+    font-family:"Poppins",sans-serif;
 }
 
 .nav{
@@ -13,4 +14,34 @@ body {
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
     
 }
-
+section{
+    padding: 20px;
+    
+}
+.hero{
+    display: flex;
+    flex-direction: column;
+}
+.map{
+    max-width: 800px;
+    align-self: center;
+    border-radius: 10px;
+    margin-bottom: 32px;
+}
+.title{
+    font-size: 36px;
+    font-weight: 600;
+    max-width: 347px;
+    margin-bottom: 16px;
+    margin-left: 36px;
+}
+.para{
+    font-size: 16px;
+    font-weight: 300;
+    max-width: 320px;
+    margin-left:36px;
+    margin-top:0px;
+}
+/* .info{
+    max-width: 400px;
+} */
